# my-guard

./: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
dev-ledger/: 2026-07-06.jsonl  2026-07-07.jsonl  2026-07-12.jsonl  5c1bd1b5.jsonl
src/myguard/: __init__.py  ask.py  guard.py  rules.py
tests/: test_ask.py  test_guard.py
